--- a/index.html
+++ b/index.html
@@ -10,6 +10,69 @@
     <link rel="stylesheet" href="styles/style.css">
 </head>
 <body class="azeret-mono-space">
+    <header>
+        <nav>
+            <ul class="great">
+                <li><img src="styles/images/Group.png"></li>
+                <li><h1 class="habib">"In the near future, I hope to become a Developer."</h1></li>
+                <li><p><small>it is a great skill to learn</small></p></li>
+                <li><a href=""><button class="btn">Contact with me</button></a></li>
+            </ul>
+        </nav>
+
+    </header>
+    <main>
+        <nav class="info">
+            <div class="text">
+            <h1>Why Web Development??</h1>
+            <p>it is a very useful skill to learn in the era of modern science</p>
+            </div>
+
+
+            <div class="asus">
+                <ul type="none" class="hp">
+                    <li><h3>I will Do Coding and Change The World</h3></li>
+                    <li><p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p></li>
+                    <li><a href=""> <button class="jack">Learn more</button></a></li>
+                </ul>
+                <img class="bang" src="images/Layer_1.png">
+            </div>
+
+
+            <div class="dog">
+                <img class="big" src="images/Group 3.png">
+                <ul type="none" class="cat">
+                    <li><h3>I will help People by creating Modern Web System</h3></li>
+                    <li> Modern CMS platforms offer more flexibility for developers while still providing an easy-to-use interface for content creators. Headless CMSs, in particular, allow for the content to be used across different platforms (web, mobile apps) seamlessly.</li>
+                    <li><a href=""><button class="rat">Learn more</button></a></li>
+                </ul>
+            </div>
+
+
+            <div class="mango">
+                <ul type="none" class="banana">
+                    <li><h3>I will Do Coding and Change The World</h3></li>
+                    <li><p>Problem Solving Ability. Coding is all about problem solving using a step-by-step and systematic approach.</p></li>
+                    <li><a href=""><button class="apple">Learn more</button></a></li>
+                </ul>
+                <img id="card" src="images/Group 4.png">
+            </div>
+
+        </nav>
+
+        <div >
+            <ul type="none" class="tiger">
+            <li><h2>My Inspiration</h2></li>
+            <li>programing is not about what you know <br> it is about what you can figure out</li>
+            </ul>
+            <iframe class="lion" width="560" height="320" src="https://www.youtube.com/embed/4O3AUH010rE?si=62IlnAj2BQO2KlCB" title="YouTube video player"></iframe>
+            
+        </div>
+
+    </main>
+    <footer>
+
+    </footer>
     
 </body>
 </html>
